--- a/zephyrproject/apps/say_hello/prj.conf
+++ b/zephyrproject/apps/say_hello/prj.conf
@@ -7,4 +7,8 @@ CONFIG_PRINTK=y
 CONFIG_LOG=y
 CONFIG_LOG_DEFAULT_LEVEL=3
 
-CONFIG_THREAD_NAME=y
+#Threads
+#CONFIG_THREAD_NAME=y
+
+# custom module
+#CONFIG_SAY_HELLO=y
